build 8 - dec/28/2020
 - python: pip-20.3.3
 - python: youtube-dl 2020.12.29

build 7 - dec/8/2020
 - python: pip-20.3.1
 - python: youtube-dl 2020.12.7
 - false positive AV warning caused by PyInstaller fixed

build 6 - nov/18/2020
 - python: youtube-dl 2020.11.18
 - python: pyinstaller 4.0
 - Smaller build, down 2.4MB

build 5 - nov/13/2020
 - python: youtube-dl 2020.11.12
 - lint cleanups

build 4 - nov/03/2020
 - python: youtube-dl 2020.11.1
 - python: pycryptodome 3.9.9

build 3 - oct/20/2020
 - configure.sh to setup and upgrade all build dependencies for windows, macos, linux
 - build.sh builds telluride binaries for windows, macos, linux
 - -a, --audio-only option flag to convert to mp3 if ffmpeg avaiable. strips video data from .webm if not
 - -m, --meta-only option flag to print JSON with meta data about video found in URL
 - Added Apache License 2.0
 - python: pip 20.2.4
 - python: youtube-dl 2020.9.20
 - python: pycryptodome 3.9.8
 - python: pyinstaller 4.0
 - python: pylint 2.6.0