@@ -1,5 +1,10 @@
 #!/bin/bash
-codesign --verbose=4 -s KET68JTS3L --entitlements Entitlements.plist -f telluride_macos
+codesign --verbose=4 \
+         -s KET68JTS3L \
+         --entitlements Entitlements.plist \
+         --options runtime \
+         -f \
+         telluride_macos
 codesign -vvv telluride_macos
 
 # This tool must be symlinked from our private repo given it includes credentials
